<resources>
    <string name="app_name">Jotted</string>

    <string name="what_is_in_your_mind">What is in your mind.</string>
    <string name="Save">Save</string>
    <string name="title_should_not_empty">Title should not empty.</string>
    <string name="add_image">Add image</string>
    <string name="delete">Delete</string>
    <string name="delete_this_diary">Delete this diary?</string>
    <string name="unsupported_image_format">Unsupported image format.</string>
    <string name="search">Search</string>
    <string name="pick_youtube">Pick Youtube</string>
    <string name="attachment">Attachment</string>
    <string name="pick_location">Pick Location</string>
    <string name="keyword_for_search">Keyword for search</string>
    <string name="fetching_failed">Fetching failed</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="jotted">Jotted</string>
    <string name="Restore">Restore</string>
    <string name="restore_with_">Restore with %s?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="bio_authorization">Biometric authorization</string>
    <string name="fingerprint_auth">Fingerprint authorization</string>
    <string name="authorization">Authorization</string>
    <string name="web_access">Web Access</string>
    <string name="new_tag">New Tag</string>
    <string name="tag">Tag</string>
    <string name="tag_title">Tag: %s</string>
    <string name="enter_new_tag">Enter new tag</string>
    <string name="want_to_support_this_app">Want to support this app? How about
        buy me a coffee.
    </string>
    <string name="support">Support</string>
    <string name="support_this_app">Support this app</string>
    <string name="thanks">Thanks!</string>
    <string name="diaries">Diaries</string>
    <string name="diary">Diary</string>
    <string name="backups">Backups</string>
    <string name="tags">Tags</string>
    <string name="diary_map">DiaryMap</string>
    <string name="map">Map</string>
    <string name="preload_location">Preload location</string>
    <string name="internal_file_explorer">Internal File Explorer</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="New_Jot">New Jot</string>
    <string name="listing">Listing</string>
    <string name="jots">Jots</string>
    <string name="properties">Properties</string>
    <string name="enter_tag_name">New Tag name</string>
    <string name="moods">Moods</string>
    <string name="empty">Empty</string>
    <string name="discard">Discard</string>
    <string name="jwt">Account</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="analytics">Analytics</string>
    <string name="jots_title">Jots: %s</string>
    <string name="tags_title">Tags: %s</string>
    <string name="view_mode">View Mode</string>
    <string name="email_title">Email: %s</string>
    <string name="name_title">Name: %s</string>
    <string name="combine">Combine</string>
    <string name="combine_">Combine: %s</string>
    <string name="not_supported_file">Not supported file</string>
    <string name="location_lat_lon">Location: %s, %s</string>
    <string name="new_attachment">New attachment</string>
    <string name="new_">New</string>
    <string name="no_location">No location</string>
    <string name="used_">Used: %s</string>
    <string name="Storage_usage_">Storage usage: %s</string>
    <string name="Backup">Backup</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string
        name="Restore_from_Google_Drive_will_remove_all_data_at_this_device_Proceed_">
        Restore from Google Drvive will remove all data at this device. Proceed?
    </string>
    <string name="Backup_service_Drive_">Backup service(Drive)</string>
    <string name="Backup_Restore_Jots_to_drives">Backup/Restore Jots to Drives
    </string>
    <string name="Backup_in_progress">Backup in progress</string>
    <string name="Backup_Successfully">Backup Successfully</string>
    <string name="BackingUp">Backing up</string>
    <string name="Backup_done">Backup done</string>
    <string name="Restoring">Restoring</string>
    <string name="Restored">Restored</string>
    <string name="Purchase">Purchase</string>
    <string name="not_available">Not available</string>
    <string name="Google_Drive_backup">Google Drive backup</string>
    <string name="Premium">Premium</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Subscribe____month">Subscribe %s/month</string>
    <string name="File_no_yet_synced">File no yet synced.</string>
    <string name="Capture_a_picture">Capture a picture</string>
    <string name="Choose_exist_files">Choose exist files</string>
    <string name="Text_detected">Text detected</string>
    <string
        name="There_are_some_texts_detected_in_the_picture_do_you_want_to_append_to_the_content_">
        There are some texts detected in the picture, do you want to append to
        the content?
    </string>
    <string name="Hand_writing">Hand writing</string>
    <string name="Subscribe_for_AI_magics">Subscribe for AI magics</string>
    <string name="Uri___">Uri: %s</string>
    <string name="Pick_days">Pick days</string>
    <string name="Clear">Clear</string>
    <string name="Started_from">Started from</string>
    <string name="Ended_at">Ended at</string>
    <string name="Syncs">Syncs</string>
    <string
        name="Subscribe_to_enable_the_cloud_syncing_and_all_the_smart_functionns">
        Subscribe to ennnable the cloud syncinng and AI functions!
    </string>
    <string name="Cloud_syncs">Cloud syncs</string>
    <string name="Clouds">Clouds</string>
    <string name="Invalid_purchase_state">Invalid purchase state</string>
    <string
        name="User_not_as_same_as_previous_logged_in__change_to_this_account_">
        User not as same as previous logged in, change to this jwt?
    </string>
    <string name="Change_account">Change jwt</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Version">Version</string>
    <string name="v__">v%s</string>
    <string name="Log_in">Log in</string>
    <string name="Touch_ID">Touch ID</string>
    <string name="Encryption_key">Encryption key</string>
    <string name="App_use_this_key_to_encrypt_your_data">App Use this key to encrypt your data</string>
    <string name="Sync_service">Sync service</string>
    <string name="Service_syncs_jots_to_cloud">Service sync jots to cloud</string>
    <string name="Encryption_key_not_valid">Encryption key not valid</string>
    <string name="The_local_encryption_key_is_not_match_to_cloud_one_please_choose_which_one_to_keep">The local encryption key is not match to cloud one, please choose which one to keep.</string>
    <string name="Change_encryption_key">Change encryption key</string>
    <string name="The_encryption_key_is_conflicted_to_cloud_one__To_make_sync_wokring_you_have_to_enter_correct_key_or_use_local_key_Delete_cloud_data_">
        The encryption key is conflicted to cloud one. To make sync working you have to enter correct key or user local key(Delete cloud data).
    </string>
    <string name="Enter_new_key">Enter new key</string>
    <string name="Use_local_key_Delete_remote_data__">Use local key(Delete remote data).</string>
    <string name="Jotted_is_syncing">Jotted is syncing</string>
    <string name="The_app_is_syncing_Jots_to_cloud">The app is syncing Jots to cloud.</string>
    <string name="Delete_all_remote_data_">Delete all remote data?</string>
    <string name="Are_you_sure_to_delete_all_data_at_cloude_due_to_the_encryption_key_change_">Are you sure to delete all data at cloud due to the encryption key change?</string>
    <string name="High_More_space_">High(More space)</string>
    <string name="Good">Good</string>
    <string name="Low_Noticeable_quality_loss_">Low(Noticeable Quality Loss)</string>
    <string name="Image_quality">Image quality</string>
    <string name="Syncing______">Syncing %s/%s</string>
    <string name="Sync_now">Sync now</string>
    <string name="last_synced___">Last synced: %s</string>
    <string name="none">none</string>
    <string name="Attachments_in_Jots">Attachments in Jots</string>
    <string name="Untitled">Untitled</string>
    <string name="Size___">Size: %s</string>
    <string name="JCamera">JCamera</string>
    <string name="Capture_photos_for_your_journey">Capture photos for your journey.</string>
    <string name="Camera_disabled">Camera disabled</string>
    <string name="Add_a_title">Add a title</string>
    <string name="Start_writing___">Start writing...</string>
    <string name="No_title">No Title</string>
    <string name="Done">Done</string>
    <string name="Edit">Edit</string>
    <string name="Today">Today</string>
    <string name="Are_you_sure_to_discard_">Are you sure to discard?</string>
    <string name="New">New</string>
    <string name="No_Jots">No Jot</string>
    <string name="Black_hole_destroys_everything_nearby">Black hole destroys everything nearby.</string>
    <string name="Remove_location_">Remove location?</string>
    <string name="Temperature___">Temperature: %s</string>
    <string name="Humidity_____">Humidity: </string>
    <string name="Private_content">Private Content</string>
    <string name="Unlock_for_the_private_content">Unlock for the private content</string>
    <string name="Nothing_found">Nothing found</string>
    <string name="Sync">Sync</string>
    <string name="service_for_syncing">Service for syncing</string>
    <string name="Account__">Account: %s</string>
    <string name="Select_date_range">Select date range</string>
    <string name="Jotted_sync_failed___">Jotted sync failed %s</string>
</resources>
