<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/jots"
        android:id="@id/jotsCalendarFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_agenda"
        app:iconTint="@color/colorPrimaryDark" />

    <item
        android:title="@string/map"
        app:showAsAction="always"
        android:id="@id/jotsMapFragment"
        app:iconTint="@color/colorPrimaryDark"
        android:icon="@drawable/ic_map" />

    <item
        android:title="@string/settings"
        app:showAsAction="always"
        android:id="@+id/settingFragment"
        app:iconTint="@color/colorPrimaryDark"
        android:icon="@drawable/ic_gear" />
</menu>